--- a/config/switchableresourcepacksconfig.json5
+++ b/config/switchableresourcepacksconfig.json5
@@ -13,7 +13,7 @@
 		},
 		{
 			"packname": "battle-vanilla",
-			"url": "https://dbtderpbox.github.io/LEB-Resources/zip/standard/R19/vanilla.zip",
+			"url": "https://dbtderpbox.github.io/LEB-Resources/zip/standard/R20/vanilla.zip",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
@@ -21,7 +21,7 @@
 		},
 		{
 			"packname": "battle-vanilla-optifine",
-			"url": "https://dbtderpbox.github.io/LEB-Resources/zip/optifine/R19/vanilla.zip",
+			"url": "https://dbtderpbox.github.io/LEB-Resources/zip/optifine/R20/vanilla.zip",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
@@ -29,7 +29,7 @@
 		},
 		{
 			"packname": "battle-plastic",
-			"url": "https://dbtderpbox.github.io/LEB-Resources/zip/standard/R19/plastic.zip",
+			"url": "https://dbtderpbox.github.io/LEB-Resources/zip/standard/R20/plastic.zip",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
@@ -37,7 +37,7 @@
 		},
 		{
 			"packname": "battle-plastic-optifine",
-			"url": "https://dbtderpbox.github.io/LEB-Resources/zip/optifine/R19/plastic.zip",
+			"url": "https://dbtderpbox.github.io/LEB-Resources/zip/optifine/R20/plastic.zip",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
@@ -45,7 +45,7 @@
 		},
 		{
 			"packname": "battle-fantasy",
-			"url": "https://dbtderpbox.github.io/LEB-Resources/zip/standard/R19/fantasy.zip",
+			"url": "https://dbtderpbox.github.io/LEB-Resources/zip/standard/R20/fantasy.zip",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
@@ -53,7 +53,7 @@
 		},
 		{
 			"packname": "battle-fantasy-optifine",
-			"url": "https://dbtderpbox.github.io/LEB-Resources/zip/optifine/R19/fantasy.zip",
+			"url": "https://dbtderpbox.github.io/LEB-Resources/zip/optifine/R20/fantasy.zip",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
@@ -61,7 +61,7 @@
 		},
 		{
 			"packname": "battle-city",
-			"url": "https://dbtderpbox.github.io/LEB-Resources/zip/standard/R19/city.zip",
+			"url": "https://dbtderpbox.github.io/LEB-Resources/zip/standard/R20/city.zip",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
@@ -69,7 +69,7 @@
 		},
 		{
 			"packname": "battle-city-optifine",
-			"url": "https://dbtderpbox.github.io/LEB-Resources/zip/optifine/R19/city.zip",
+			"url": "https://dbtderpbox.github.io/LEB-Resources/zip/optifine/R20/city.zip",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
@@ -77,7 +77,7 @@
 		},
 		{
 			"packname": "battle-greek",
-			"url": "https://dbtderpbox.github.io/LEB-Resources/zip/standard/R19/greek-mythology.zip",
+			"url": "https://dbtderpbox.github.io/LEB-Resources/zip/standard/R20/greek-mythology.zip",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
@@ -85,7 +85,23 @@
 		},
 		{
 			"packname": "battle-greek-optifine",
-			"url": "https://dbtderpbox.github.io/LEB-Resources/zip/optifine/R19/greek-mythology.zip",
+			"url": "https://dbtderpbox.github.io/LEB-Resources/zip/optifine/R20/greek-mythology.zip",
+			"hash": "",
+			"required": true,
+			"hasPrompt": true,
+			"message": "Please accept to preload resources!"
+		},
+		{
+			"packname": "battle-steampunk",
+			"url": "https://dbtderpbox.github.io/LEB-Resources/zip/standard/R20/steampunk.zip",
+			"hash": "",
+			"required": true,
+			"hasPrompt": true,
+			"message": "Please accept to preload resources!"
+		},
+		{
+			"packname": "battle-steampunk-optifine",
+			"url": "https://dbtderpbox.github.io/LEB-Resources/zip/optifine/R20/steampunk.zip",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
