--- a/config/switchableresourcepacksconfig.json5
+++ b/config/switchableresourcepacksconfig.json5
@@ -106,6 +106,22 @@
 			"required": true,
 			"hasPrompt": true,
 			"message": "Please accept to preload resources!"
+		},
+		{
+			"packname": "battle-halloween",
+			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/standard/R24/halloween.zip?raw=true",
+			"hash": "",
+			"required": true,
+			"hasPrompt": true,
+			"message": "Please accept to preload resources!"
+		},
+		{
+			"packname": "battle-halloween-optifine",
+			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/optifine/R24/halloween.zip?raw=true",
+			"hash": "",
+			"required": true,
+			"hasPrompt": true,
+			"message": "Please accept to preload resources!"
 		}
 	]
 }
