--- a/config/switchableresourcepacksconfig.json5
+++ b/config/switchableresourcepacksconfig.json5
@@ -5,7 +5,7 @@
 	"packs": [
 		{
 			"packname": "menu",
-			"url": "https://dbtderpbox.github.io/LEM-Menu-Resources/zip/resources4.zip",
+			"url": "https://github.com/DBTDerpbox/LEM-Menu-Resources/blob/zip/zip/resources4.zip?raw=true",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
@@ -13,7 +13,7 @@
 		},
 		{
 			"packname": "battle-vanilla",
-			"url": "https://dbtderpbox.github.io/LEB-Resources/zip/standard/R24/vanilla.zip",
+			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/standard/R24/vanilla.zip?raw=true",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
@@ -21,7 +21,7 @@
 		},
 		{
 			"packname": "battle-vanilla-optifine",
-			"url": "https://dbtderpbox.github.io/LEB-Resources/zip/optifine/R24/vanilla.zip",
+			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/optifine/R24/vanilla.zip?raw=true",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
@@ -29,7 +29,7 @@
 		},
 		{
 			"packname": "battle-plastic",
-			"url": "https://dbtderpbox.github.io/LEB-Resources/zip/standard/R24/plastic.zip",
+			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/standard/R24/plastic.zip?raw=true",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
@@ -37,7 +37,7 @@
 		},
 		{
 			"packname": "battle-plastic-optifine",
-			"url": "https://dbtderpbox.github.io/LEB-Resources/zip/optifine/R24/plastic.zip",
+			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/optifine/R24/plastic.zip?raw=true",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
@@ -45,7 +45,7 @@
 		},
 		{
 			"packname": "battle-fantasy",
-			"url": "https://dbtderpbox.github.io/LEB-Resources/zip/standard/R24/fantasy.zip",
+			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/standard/R24/fantasy.zip?raw=true",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
@@ -53,7 +53,7 @@
 		},
 		{
 			"packname": "battle-fantasy-optifine",
-			"url": "https://dbtderpbox.github.io/LEB-Resources/zip/optifine/R24/fantasy.zip",
+			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/optifine/R24/fantasy.zip?raw=true",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
@@ -61,7 +61,7 @@
 		},
 		{
 			"packname": "battle-city",
-			"url": "https://dbtderpbox.github.io/LEB-Resources/zip/standard/R24/city.zip",
+			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/standard/R24/city.zip?raw=true",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
@@ -69,7 +69,7 @@
 		},
 		{
 			"packname": "battle-city-optifine",
-			"url": "https://dbtderpbox.github.io/LEB-Resources/zip/optifine/R24/city.zip",
+			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/optifine/R24/city.zip?raw=true",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
@@ -77,7 +77,7 @@
 		},
 		{
 			"packname": "battle-greek",
-			"url": "https://dbtderpbox.github.io/LEB-Resources/zip/standard/R24/greek-mythology.zip",
+			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/standard/R24/greek-mythology.zip?raw=true",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
@@ -85,7 +85,7 @@
 		},
 		{
 			"packname": "battle-greek-optifine",
-			"url": "https://dbtderpbox.github.io/LEB-Resources/zip/optifine/R24/greek-mythology.zip",
+			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/optifine/R24/greek-mythology.zip?raw=true",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
@@ -93,7 +93,7 @@
 		},
 		{
 			"packname": "battle-steampunk",
-			"url": "https://dbtderpbox.github.io/LEB-Resources/zip/standard/R24/steampunk.zip",
+			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/standard/R24/steampunk.zip?raw=true",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
@@ -101,7 +101,7 @@
 		},
 		{
 			"packname": "battle-steampunk-optifine",
-			"url": "https://dbtderpbox.github.io/LEB-Resources/zip/optifine/R24/steampunk.zip",
+			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/optifine/R24/steampunk.zip?raw=true",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
