--- a/config/switchableresourcepacksconfig.json5
+++ b/config/switchableresourcepacksconfig.json5
@@ -5,7 +5,7 @@
 	"packs": [
 		{
 			"packname": "menu",
-			"url": "https://dbtderpbox.github.io/LEM-Menu-Resources/zip/resources4.zip",
+			"url": "https://github.com/DBTDerpbox/LEM-Menu-Resources/blob/zip/zip/resources5.zip?raw=true",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
