--- a/config/switchableresourcepacksconfig.json5
+++ b/config/switchableresourcepacksconfig.json5
@@ -138,6 +138,22 @@
 			"required": true,
 			"hasPrompt": true,
 			"message": "Please accept to preload resources!"
+		},
+		{
+			"packname": "battle-festive",
+			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/standard/R24/festive.zip?raw=true",
+			"hash": "",
+			"required": false,
+			"hasPrompt": true,
+			"message": "Please accept to preload resources!"
+		},
+		{
+			"packname": "battle-festive-optifine",
+			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/optifine/R24/festive.zip?raw=true",
+			"hash": "",
+			"required": false,
+			"hasPrompt": true,
+			"message": "Please accept to preload resources!"
 		}
 	]
 }
