--- a/config/switchableresourcepacksconfig.json5
+++ b/config/switchableresourcepacksconfig.json5
@@ -154,6 +154,22 @@
 			"required": true,
 			"hasPrompt": true,
 			"message": "Please accept to preload resources!"
+		},
+		{
+			"packname": "battle-fallout",
+			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/standard/R25/fallout.zip?raw=true",
+			"hash": "",
+			"required": true,
+			"hasPrompt": true,
+			"message": "Please accept to preload resources!"
+		},
+		{
+			"packname": "battle-fallout-optifine",
+			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/optifine/R25/fallout.zip?raw=true",
+			"hash": "",
+			"required": true,
+			"hasPrompt": true,
+			"message": "Please accept to preload resources!"
 		}
 	]
 }
