--- a/config/switchableresourcepacksconfig.json5
+++ b/config/switchableresourcepacksconfig.json5
@@ -5,7 +5,7 @@
 	"packs": [
 		{
 			"packname": "menu",
-			"url": "https://github.com/DBTDerpbox/LEM-Menu-Resources/blob/zip/zip/resources7.zip?raw=true",
+			"url": "http://23.185.17.134:80/lem/resources/menu/resources8.zip",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
