--- a/config/switchableresourcepacksconfig.json5
+++ b/config/switchableresourcepacksconfig.json5
@@ -13,7 +13,7 @@
 		},
 		{
 			"packname": "battle-vanilla",
-			"url": "http://23.185.17.134:80/lem/resources/battle/R25P/vanilla/vanilla.zip",
+			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/standard/R26/vanilla.zip?raw=true",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
@@ -21,7 +21,7 @@
 		},
 		{
 			"packname": "battle-vanilla-optifine",
-			"url": "http://23.185.17.134:80/lem/resources/battle/R25P/opticringe/vanilla.zip",
+			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/optifine/R26/vanilla.zip?raw=true",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
@@ -29,7 +29,7 @@
 		},
 		{
 			"packname": "battle-plastic",
-			"url": "http://23.185.17.134:80/lem/resources/battle/R25P/vanilla/plastic.zip",
+			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/standard/R26/plastic.zip?raw=true",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
@@ -37,7 +37,7 @@
 		},
 		{
 			"packname": "battle-plastic-optifine",
-			"url": "http://23.185.17.134:80/lem/resources/battle/R25P/opticringe/plastic.zip",
+			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/optifine/R26/plastic.zip?raw=true",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
@@ -45,7 +45,7 @@
 		},
 		{
 			"packname": "battle-fantasy",
-			"url": "http://23.185.17.134:80/lem/resources/battle/R25P/vanilla/fantasy.zip",
+			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/standard/R26/fantasy.zip?raw=true",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
@@ -53,7 +53,7 @@
 		},
 		{
 			"packname": "battle-fantasy-optifine",
-			"url": "http://23.185.17.134:80/lem/resources/battle/R25P/opticringe/fantasy.zip",
+			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/optifine/R26/fantasy.zip?raw=true",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
@@ -61,7 +61,7 @@
 		},
 		{
 			"packname": "battle-city",
-			"url": "http://23.185.17.134:80/lem/resources/battle/R25P/vanilla/city.zip",
+			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/standard/R26/city.zip?raw=true",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
@@ -69,7 +69,7 @@
 		},
 		{
 			"packname": "battle-city-optifine",
-			"url": "http://23.185.17.134:80/lem/resources/battle/R25P/opticringe/city.zip",
+			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/optifine/R26/city.zip?raw=true",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
@@ -77,7 +77,7 @@
 		},
 		{
 			"packname": "battle-greek",
-			"url": "http://23.185.17.134:80/lem/resources/battle/R25P/vanilla/greek-mythology.zip",
+			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/standard/R26/greek-mythology.zip?raw=true",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
@@ -85,7 +85,7 @@
 		},
 		{
 			"packname": "battle-greek-optifine",
-			"url": "http://23.185.17.134:80/lem/resources/battle/R25P/opticringe/greek-mythology.zip",
+			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/optifine/R26/greek-mythology.zip?raw=true",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
@@ -93,7 +93,7 @@
 		},
 		{
 			"packname": "battle-steampunk",
-			"url": "http://23.185.17.134:80/lem/resources/battle/R25P/vanilla/steampunk.zip",
+			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/standard/R26/steampunk.zip?raw=true",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
@@ -101,7 +101,7 @@
 		},
 		{
 			"packname": "battle-steampunk-optifine",
-			"url": "http://23.185.17.134:80/lem/resources/battle/R25P/opticringe/steampunk.zip",
+			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/optifine/R26/steampunk.zip?raw=true",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
@@ -109,7 +109,7 @@
 		},
 		{
 			"packname": "battle-chinese",
-			"url": "http://23.185.17.134:80/lem/resources/battle/R25P/vanilla/chinese-mythology.zip",
+			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/standard/R26/chinese-mythology.zip?raw=true",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
@@ -117,7 +117,7 @@
 		},
 		{
 			"packname": "battle-chinese-optifine",
-			"url": "http://23.185.17.134:80/lem/resources/battle/R25P/opticringe/chinese-mythology.zip",
+			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/optifine/R26/chinese-mythology.zip?raw=true",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
@@ -125,7 +125,7 @@
 		},
 		{
 			"packname": "battle-halloween",
-			"url": "http://23.185.17.134:80/lem/resources/battle/R25P/vanilla/halloween.zip",
+			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/standard/R26/halloween.zip?raw=true",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
@@ -133,7 +133,7 @@
 		},
 		{
 			"packname": "battle-halloween-optifine",
-			"url": "http://23.185.17.134:80/lem/resources/battle/R25P/opticringe/halloween.zip",
+			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/optifine/R26/halloween.zip?raw=true",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
@@ -141,7 +141,7 @@
 		},
 		{
 			"packname": "battle-festive",
-			"url": "http://23.185.17.134:80/lem/resources/battle/R25P/vanilla/festive.zip",
+			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/standard/R26/festive.zip?raw=true",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
@@ -149,7 +149,7 @@
 		},
 		{
 			"packname": "battle-festive-optifine",
-			"url": "http://23.185.17.134:80/lem/resources/battle/R25P/opticringe/festive-fix.zip",
+			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/optifine/R26/festive.zip?raw=true",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
@@ -157,7 +157,7 @@
 		},
 		{
 			"packname": "battle-fallout",
-			"url": "http://23.185.17.134:80/lem/resources/battle/R25P/vanilla/fallout.zip",
+			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/standard/R26/fallout.zip?raw=true",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
@@ -165,7 +165,7 @@
 		},
 		{
 			"packname": "battle-fallout-optifine",
-			"url": "http://23.185.17.134:80/lem/resources/battle/R25P/opticringe/fallout.zip",
+			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/optifine/R26/fallout.zip?raw=true",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
