--- a/config/serverutils/switchableresourcepacks.json5
+++ b/config/serverutils/switchableresourcepacks.json5
@@ -7,8 +7,17 @@
 	*/
 	"packs": [
 		{
+			"packname": "menu-setup",
+			"url": "https://github.com/DBTDerpbox/LEM-Menu-Resources/blob/zip/zip/resources11/setup.zip?raw=true",
+			"hash": "",
+			"required": true,
+			"hasPrompt": true,
+			"message": "Legacy Edition Minigames requires a resource pack to function properly!",
+			"packCompatibility": "BOTH"
+		},
+		{
 			"packname": "menu",
-			"url": "https://github.com/DBTDerpbox/LEM-Menu-Resources/blob/zip/zip/resources10/vanilla/resources.zip?raw=true",
+			"url": "https://github.com/DBTDerpbox/LEM-Menu-Resources/blob/zip/zip/resources11/vanilla/resources.zip?raw=true",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
@@ -17,7 +26,7 @@
 		},
 		{
 			"packname": "menu-optifine",
-			"url": "https://github.com/DBTDerpbox/LEM-Menu-Resources/blob/zip/zip/resources10/optifine/resources.zip?raw=true",
+			"url": "https://github.com/DBTDerpbox/LEM-Menu-Resources/blob/zip/zip/resources11/optifine/resources.zip?raw=true",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
