--- a/config/serverutils/switchableresourcepacks.json5
+++ b/config/serverutils/switchableresourcepacks.json5
@@ -35,7 +35,7 @@
 		},
 		{
 			"packname": "battle-vanilla",
-			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/standard/R26.3/vanilla.zip?raw=true",
+			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/standard/R26.4/vanilla.zip?raw=true",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
@@ -44,7 +44,7 @@
 		},
 		{
 			"packname": "battle-vanilla-optifine",
-			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/optifine/R26.3/vanilla.zip?raw=true",
+			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/optifine/R26.4/vanilla.zip?raw=true",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
@@ -53,7 +53,7 @@
 		},
 		{
 			"packname": "battle-all-music-1",
-			"url": "https://www.dropbox.com/s/zvbmzme0ym5uxkn/all-music-1-xof.zip?dl=1",
+			"url": "https://www.dropbox.com/s/ogycu8uzg696r8m/all-music-1.zip?dl\u003d1",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
@@ -62,7 +62,7 @@
 		},
 		{
 			"packname": "battle-all-music-1-optifine",
-			"url": "https://www.dropbox.com/s/dzzdl7sd5nhznep/all-music-1-xof.zip?dl=1",
+			"url": "https://www.dropbox.com/s/jza37nsig7h3idn/all-music-1.zip?dl\u003d1",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
@@ -71,7 +71,7 @@
 		},
 		{
 			"packname": "battle-plastic",
-			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/standard/R26.3/plastic.zip?raw=true",
+			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/standard/R26.4/plastic.zip?raw=true",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
@@ -80,7 +80,7 @@
 		},
 		{
 			"packname": "battle-plastic-optifine",
-			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/optifine/R26.3/plastic.zip?raw=true",
+			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/optifine/R26.4/plastic.zip?raw=true",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
@@ -89,7 +89,7 @@
 		},
 		{
 			"packname": "battle-fantasy",
-			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/standard/R26.3/fantasy.zip?raw=true",
+			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/standard/R26.4/fantasy.zip?raw=true",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
@@ -98,7 +98,7 @@
 		},
 		{
 			"packname": "battle-fantasy-optifine",
-			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/optifine/R26.3/fantasy.zip?raw=true",
+			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/optifine/R26.4/fantasy.zip?raw=true",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
@@ -107,7 +107,7 @@
 		},
 		{
 			"packname": "battle-city",
-			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/standard/R26.3/city.zip?raw=true",
+			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/standard/R26.4/city.zip?raw=true",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
@@ -116,7 +116,7 @@
 		},
 		{
 			"packname": "battle-city-optifine",
-			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/optifine/R26.3/city.zip?raw=true",
+			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/optifine/R26.4/city.zip?raw=true",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
@@ -125,7 +125,7 @@
 		},
 		{
 			"packname": "battle-greek",
-			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/standard/R26.3/greek-mythology.zip?raw=true",
+			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/standard/R26.4/greek-mythology.zip?raw=true",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
@@ -134,7 +134,7 @@
 		},
 		{
 			"packname": "battle-greek-optifine",
-			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/optifine/R26.3/greek-mythology.zip?raw=true",
+			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/optifine/R26.4/greek-mythology.zip?raw=true",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
@@ -143,7 +143,7 @@
 		},
 		{
 			"packname": "battle-steampunk",
-			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/standard/R26.3/steampunk.zip?raw=true",
+			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/standard/R26.4/steampunk.zip?raw=true",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
@@ -152,7 +152,7 @@
 		},
 		{
 			"packname": "battle-steampunk-optifine",
-			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/optifine/R26.3/steampunk.zip?raw=true",
+			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/optifine/R26.4/steampunk.zip?raw=true",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
@@ -161,7 +161,7 @@
 		},
 		{
 			"packname": "battle-chinese",
-			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/standard/R26.3/chinese-mythology.zip?raw=true",
+			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/standard/R26.4/chinese-mythology.zip?raw=true",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
@@ -170,7 +170,7 @@
 		},
 		{
 			"packname": "battle-chinese-optifine",
-			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/optifine/R26.3/chinese-mythology.zip?raw=true",
+			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/optifine/R26.4/chinese-mythology.zip?raw=true",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
@@ -179,7 +179,7 @@
 		},
 		{
 			"packname": "battle-halloween",
-			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/standard/R26.3/halloween-1.19-xof.zip?raw=true",
+			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/standard/R26.4/halloween-1.19-xof.zip?raw=true",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
@@ -188,7 +188,7 @@
 		},
 		{
 			"packname": "battle-halloween-optifine",
-			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/optifine/R26.3/halloween-1.19-xof.zip?raw=true",
+			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/optifine/R26.4/halloween-1.19-xof.zip?raw=true",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
@@ -197,7 +197,7 @@
 		},
 		{
 			"packname": "battle-festive",
-			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/standard/R26.3/festive.zip?raw=true",
+			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/standard/R26.4/festive.zip?raw=true",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
@@ -206,7 +206,7 @@
 		},
 		{
 			"packname": "battle-festive-optifine",
-			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/optifine/R26.3/festive.zip?raw=true",
+			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/optifine/R26.4/festive.zip?raw=true",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
@@ -215,7 +215,7 @@
 		},
 		{
 			"packname": "battle-fallout",
-			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/standard/R26.3/fallout.zip?raw=true",
+			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/standard/R26.4/fallout.zip?raw=true",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
@@ -224,7 +224,25 @@
 		},
 		{
 			"packname": "battle-fallout-optifine",
-			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/optifine/R26.3/fallout.zip?raw=true",
+			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/optifine/R26.4/fallout.zip?raw=true",
+			"hash": "",
+			"required": true,
+			"hasPrompt": true,
+			"message": "Legacy Edition Battle requires a resource pack to function properly!",
+			"packCompatibility": "OPTIFINE"
+		},
+		{
+			"packname": "battle-natural",
+			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/standard/R26.4/natural.zip?raw=true",
+			"hash": "",
+			"required": true,
+			"hasPrompt": true,
+			"message": "Legacy Edition Battle requires a resource pack to function properly!",
+			"packCompatibility": "VANILLA"
+		},
+		{
+			"packname": "battle-natural-optifine",
+			"url": "https://github.com/DBTDerpbox/LEB-Resources/blob/zip/zip/optifine/R26.4/natural.zip?raw=true",
 			"hash": "",
 			"required": true,
 			"hasPrompt": true,
