--- a/config/serverutils/switchableresourcepacks.json5
+++ b/config/serverutils/switchableresourcepacks.json5
@@ -3,7 +3,7 @@
   "packs": [
     {
       "packname": "blank",
-      "url": "https://github.com/Legacy-Edition-Minigames/Minigame-Resources/blob/zip/zip/blank.zip?raw\u003dtrue",
+      "url": "https://github.com/Legacy-Edition-Minigames/Minigame-Resources/blob/zip/zip/blank/1.19.4.zip?raw\u003dtrue",
       "hash": "",
       "required": true,
       "hasPrompt": true,
